--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,32 +2,31 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
   color: #61dafb;
 }
+.nav-bar{
+  background-color: #a72461;
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+}
+.nav-bar a{
+  text-decoration: none;
+}
+.app-body{
+  background: #f9e090;
+}
+.tables-holder{
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #dc5353;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.emotion-table{
+  border-radius: 10px;
+  background: #ff935c;
+  padding: 5px;
+  margin: 5px;
 }
