comparison is fuinctional with graph

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,3 +63,14 @@ header.page{
   padding: 10px;
   text-align: left;
 }
+.comparison{
+  display: flex;
+  flex-direction: row;
+}
+
+.graph-title{
+  text-decoration: underline;
+}
+.text-analysis{
+  padding: 5px;
+}
